# SecsGem-Simulator

./: README.md  pyproject.toml
.github/workflows/: scorecards.yml
docs/: quick_start.md  test_data_sending_guide.md
secsgem_simulator/: cli_tasks.py  secs_script.py
