[project]
name = "secsgem_simulator"
version = "0.1.0"
description = "Simulator to test secsgem protocol layer"
authors = [
    {name = "Benjamin Parzella", email = "bparzella@gmail.com"}
]
requires-python = ">=3.7"
dependencies = [
    "lupa>=1.13",
    "appdirs>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1",
    "prospector[with_mypy]>=1.7.7",
    "radon>=5.1.0",
    "tox>=3.25.1",
]

[project.scripts]
sgsim = "secsgem_simulator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
